# simplemail

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/: simpleMail.py
src/simplemail/: __main__.py  cli.py
templates/: configuration_example.ini
tests/: test_cli.py
