[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simplemail-python3"
version = "1.0.0"
description = "A simple e-mail sender in Python"
readme = "README.md"
license = "LGPL-2.1-or-later"
requires-python = ">=3.6"
authors = [
    { name = "Jonathan Gangi", email = "javgan.tar.gz@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Email",
]

[project.optional-dependencies]
test = ["pytest"]
lint = ["ruff", "flake8"]

[project.scripts]
simplemail = "simplemail.cli:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.setuptools.packages.find]
where = ["src"]
